@@ -1,0 +1,90 @@
+/*
+ *   IRC - Internet Relay Chat, Invisiblitity (+I)
+ *   (C) 2002 The UnrealIRCd Team
+ *
+ *   See file AUTHORS in IRC package for additional names of
+ *   the programmers.
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation; either version 1, or (at your option)
+ *   any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the Free Software
+ *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+#include "config.h"
+#include "struct.h"
+#include "common.h"
+#include "sys.h"
+#include "numeric.h"
+#include "msg.h"
+#include "channel.h"
+#include <time.h>
+#include <sys/stat.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#ifdef _WIN32
+#include <io.h>
+#endif
+#include <fcntl.h>
+#include "h.h"
+#ifdef STRIPBADWORDS
+#include "badwords.h"
+#endif
+#ifdef _WIN32
+#include "version.h"
+#endif
+extern long UMODE_HIDING;
+#ifndef DYNAMIC_LINKING
+ModuleHeader invisibility_Header
+#else
+#define invisibility_Header Mod_Header
+ModuleHeader Mod_Header
+#endif
+  = {
+	"invisibility",
+	"$Id$",
+	"+I mode", 
+	"3.2-b5",
+	NULL 
+    };
+
+#ifdef DYNAMIC_LINKING
+DLLFUNC int	Mod_Init(int module_load)
+#else
+int    invisibility_Init(int module_load)
+#endif
+{
+	UMODE_HIDING = get_umode('I');	
+	return MOD_SUCCESS;
+}
+
+#ifdef DYNAMIC_LINKING
+DLLFUNC int	Mod_Load(int module_load)
+#else
+int    invisibility_Load(int module_load)
+#endif
+{
+	UMODE_HIDING = get_umode('I');	
+	flag_add("R");
+	return MOD_SUCCESS;
+}
+
+#ifdef DYNAMIC_LINKING
+DLLFUNC int	Mod_Unload(int module_unload)
+#else
+int	invisibility_Unload(int module_unload)
+#endif
+{
+	umode_delete('I', UMODE_HIDING);
+	flag_del('R');
+	return MOD_SUCCESS;
+}
