@@ -388,7 +388,7 @@ static char *replies[] = {
 /* 348    RPL_EXLIST */ ":%s 348 %s %s %s %s %lu",
 /* 349    RPL_ENDOFEXLIST */ ":%s 349 %s %s :End of Channel Exception List",
 /* 350 */ NULL,
-/* 351    RPL_VERSION */ ":%s 351 %s %s(%s).%s %s :%s [%s=%li]",
+/* 351    RPL_VERSION */ ":%s 351 %s %s.%s %s :%s%s [%s=%li]",
 /* 352    RPL_WHOREPLY */ ":%s 352 %s %s %s %s %s %s %s :%d %s",
 /* 353    RPL_NAMREPLY */ ":%s 353 %s %s",
 /* 354 */ NULL, /* Reserved for Undernet */
