@@ -137,8 +137,8 @@ int  m_version(cptr, sptr, parc, parv)
 	    parv) == HUNTED_ISME)
 	{
 		sendto_one(sptr, rpl_str(RPL_VERSION), me.name,
-		    parv[0], version, ircnetwork, debugmode, me.name,
-		    serveropts,
+		    parv[0], version, debugmode, me.name,
+		    serveropts, extraflags,
 		    (IsAnOper(sptr) ? MYOSNAME : "*"), UnrealProtocol);
 		if (MyClient(sptr))
 			sendto_one(sptr, rpl_str(RPL_PROTOCTL), me.name,
